// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-avatar should render with custom props 1`] = `
<modus-wc-avatar alt="Custom avatar" custom-class="test-class" img-src="https://example.com/avatar.jpg" shape="square" size="sm">
  <div aria-label="Custom avatar" class="modus-wc-avatar">
    <div class="modus-wc-rounded-lg modus-wc-w-12 test-class">
      <img alt="Custom avatar" src="https://example.com/avatar.jpg">
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with default props 1`] = `
<modus-wc-avatar alt="Default avatar">
  <div aria-label="Default avatar" class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Default avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with initials limited to 3 characters 1`] = `
<modus-wc-avatar initials="John Michael Doe">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16">
      <span aria-label="John Michael Doe" class="initials">
        JMD
      </span>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with initials when imgSrc is not provided 1`] = `
<modus-wc-avatar alt="User initials" initials="John Doe">
  <div aria-label="User initials" class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16">
      <span aria-label="User initials" class="initials">
        JD
      </span>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with initials when size is xl 1`] = `
<modus-wc-avatar alt="User initials" initials="Jane Doe" size="xl">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-24">
      <span aria-label="User initials" class="initials">
        JD
      </span>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with no props 1`] = `
<modus-wc-avatar>
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="User avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with size lg 1`] = `
<modus-wc-avatar alt="Avatar" size="lg">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-20 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with size md 1`] = `
<modus-wc-avatar alt="Avatar" size="md">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with size sm 1`] = `
<modus-wc-avatar alt="Avatar" size="sm">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-12 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with size xl 1`] = `
<modus-wc-avatar alt="Avatar" size="xl">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-24 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with size xs 1`] = `
<modus-wc-avatar alt="Avatar" size="xs">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-8 no-image">
      <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
        <i aria-hidden="true" aria-label="Avatar" class="modus-icons-solid modus-wc-icon modus-wc-icon--md" tabindex="-1">
          person
        </i>
      </modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;
